--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "dev-hub-setup",
+  "name": "package-analytics",
   "version": "0.9.0",
   "devDependencies": {
     "prettier": "latest",
