--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -2,11 +2,19 @@
   "packageDirectories": [
     {
       "path": "package-analytics",
-      "default": true
+      "default": true,
+      "package": "Package Analytics",
+      "versionName": "Initial beta",
+      "versionNumber": "0.9.0.NEXT",
+      "versionDescription": "Initial release of new Package Analytics app"
     }
   ],
   "name": "package-analytics",
   "namespace": "",
   "sfdcLoginUrl": "https://login.salesforce.com",
-  "sourceApiVersion": "53.0"
+  "sourceApiVersion": "53.0",
+  "packageAliases": {
+    "Package Analytics": "0Ho4x00000000XICAY",
+    "Package Analytics@0.9.0-1": "04t4x000000FEhiAAG"
+  }
 }
