--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -15,6 +15,7 @@
   "sourceApiVersion": "53.0",
   "packageAliases": {
     "Package Analytics": "0Ho4x00000000XICAY",
-    "Package Analytics@0.9.0-1": "04t4x000000FEhiAAG"
+    "Package Analytics@0.9.0-1": "04t4x000000FEhiAAG",
+    "Package Analytics@0.9.0-2": "04t4x000000FEhnAAG"
   }
 }
