--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "scripts": {
     "package:version:create": "sfdx force:package:version:create --package \"Package Analytics\" --codecoverage --installationkeybypass --wait 30",
-    "prettier": "prettier --write \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\""
+    "prettier:fix": "prettier --write \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
+    "source:retrieve": "sfdx force:source:retrieve --sourcepath ./package-analytics && npm run prettier:fix"
   },
   "repository": {
     "type": "git",
