Refactored PackageExtractJob to use inner classes as substitutes for the SObjects MetataPackage, MetadataPackageVersion, and PackageSubscriber. Also switched to using Database.DmlOptions instead of the truncateFieldValue() method Thanks to @jamessimone for the fantastic suggestion on handling the SObjects - this is much cleaner than all of the stupid strings I was using previously Really beauty is on the inside - and before this change, the PackageExtractJob was very ugly Could it still be better? Probably. Is everything working? Hopefully - well enough to create a package version with code coverage.

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -1,21 +1,23 @@
 {
-  "packageDirectories": [
-    {
-      "path": "package-analytics",
-      "default": true,
-      "package": "Package Analytics",
-      "versionName": "Initial beta",
-      "versionNumber": "0.9.0.NEXT",
-      "versionDescription": "Initial release of new Package Analytics app"
+    "packageDirectories": [
+        {
+            "path": "package-analytics",
+            "default": true,
+            "package": "Package Analytics",
+            "versionName": "Initial beta",
+            "versionNumber": "0.9.0.NEXT",
+            "versionDescription": "Initial release of new Package Analytics app"
+        }
+    ],
+    "name": "package-analytics",
+    "namespace": "",
+    "sfdcLoginUrl": "https://login.salesforce.com",
+    "sourceApiVersion": "53.0",
+    "packageAliases": {
+        "Package Analytics": "0Ho4x00000000XICAY",
+        "Package Analytics@0.9.0-1": "04t4x000000FEhiAAG",
+        "Package Analytics@0.9.0-2": "04t4x000000FEhnAAG",
+        "Package Analytics@0.9.0-3": "04t4x000000FEiMAAW",
+        "Package Analytics@0.9.0-4": "04t4x000000FEiRAAW"
     }
-  ],
-  "name": "package-analytics",
-  "namespace": "",
-  "sfdcLoginUrl": "https://login.salesforce.com",
-  "sourceApiVersion": "53.0",
-  "packageAliases": {
-    "Package Analytics": "0Ho4x00000000XICAY",
-    "Package Analytics@0.9.0-1": "04t4x000000FEhiAAG",
-    "Package Analytics@0.9.0-2": "04t4x000000FEhnAAG"
-  }
 }
