Added install btn image in README, updated other README content

--- a/package.json
+++ b/package.json
@@ -15,5 +15,6 @@
     "type": "git",
     "url": "https://github.com/jongpie/PackageAnalytics.git"
   },
-  "author": "Jonathan Gillespie"
+  "author": "Jonathan Gillespie",
+  "license": "MIT"
 }
