--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "package-analytics",
-  "version": "0.9.0",
+  "version": "1.0.0",
   "devDependencies": {
     "prettier": "latest",
     "prettier-plugin-apex": "latest",
     "@prettier/plugin-xml": "latest"
   },
   "scripts": {
-    "package:version:create": "sfdx force:package:version:create --package \"Package Analytics\" --codecoverage --installationkeybypass --wait 30",
+    "package:version:create": "sfdx force:package:version:create --package \"Package Analytics\" --codecoverage --installationkeybypass --wait 30 && npm run prettier:fix",
+    "package:version:create:skipvalidation": "sfdx force:package:version:create --package \"Package Analytics\" --skipvalidation --installationkeybypass --wait 30 && npm run prettier:fix",
     "permset:assign:admin": "sfdx force:user:permset:assign --permsetname PackageAnalyticsAdmin",
     "prettier:fix": "prettier --write \"**/*.{cls,cmp,component,css,html,js,json,md,page,trigger,xml,yaml,yml}\"",
     "source:retrieve": "sfdx force:source:retrieve --sourcepath ./package-analytics && npm run prettier:fix"
