Added new "viewer" permission set for read-only access

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -21,6 +21,7 @@
     "Package Analytics@0.9.0-4": "04t4x000000FEiRAAW",
     "Package Analytics@0.9.0-5": "04t4x000000FEiWAAW",
     "Package Analytics@0.9.0-6": "04t4x000000FEibAAG",
-    "Package Analytics@1.0.0-1": "04t4x000000FEigAAG"
+    "Package Analytics@1.0.0-1": "04t4x000000FEigAAG",
+    "Package Analytics@1.0.0-2": "04t4x000000FEilAAG"
   }
 }
