--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -22,6 +22,9 @@
     "Package Analytics@0.9.0-5": "04t4x000000FEiWAAW",
     "Package Analytics@0.9.0-6": "04t4x000000FEibAAG",
     "Package Analytics@1.0.0-1": "04t4x000000FEigAAG",
-    "Package Analytics@1.0.0-2": "04t4x000000FEilAAG"
+    "Package Analytics@1.0.0-2": "04t4x000000FEilAAG",
+    "Package Analytics@1.0.0-3": "04t4x000000FEiqAAG",
+    "Package Analytics@1.0.0-4": "04t4x000000FEirAAG",
+    "Package Analytics@1.0.0-5": "04t4x000000FEivAAG"
   }
 }
