Created release candidate package version

--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -27,6 +27,7 @@
     "Package Analytics@1.0.0-3": "04t4x000000FEiqAAG",
     "Package Analytics@1.0.0-4": "04t4x000000FEirAAG",
     "Package Analytics@1.0.0-5": "04t4x000000FEivAAG",
-    "Package Analytics@1.0.0-6": "04t4x000000FEjFAAW"
+    "Package Analytics@1.0.0-6": "04t4x000000FEjFAAW",
+    "Package Analytics@1.0.0-7": "04t4x000000FEjUAAW"
   }
 }
